--- a/Demo.Office.StockPhotos/Demo.Office.StockPhotos.csproj
+++ b/Demo.Office.StockPhotos/Demo.Office.StockPhotos.csproj
@@ -22,6 +22,7 @@
     <ProjectMode>OfficeApp</ProjectMode>
     <MinimumVisualStudioVersion>12.0</MinimumVisualStudioVersion>
     <MinimumOfficeToolsVersion>12.2</MinimumOfficeToolsVersion>
+    <ActivePublishProfile>demoofficestockphotos</ActivePublishProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -48,6 +49,7 @@
     </None>
     <Content Include="Demo.Office.StockPhotosManifest\Demo.Office.StockPhotos.xml">
       <OpcRelationship>manifest-oemanifest</OpcRelationship>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
